# yazilim-lab-1-basari-hesaplama-arayuzu

./: .gitignore  README.md  pyproject.toml
data/: not_tablosu.xlsx  ogrenci_listesi.xlsx  ogrenme_ciktilari.xlsx  program_ciktilari.xlsx  tablo1.xlsx  tablo2.xlsx
src/basari_hesaplama_arayuzu/: __init__.py  app.py  cli.py  excel_utils.py  storage.py
src/basari_hesaplama_arayuzu/static/css/: style.css
src/basari_hesaplama_arayuzu/templates/: ders_detay.html  ders_ekle.html  index.html  ogrenci_listesi.html  program_ciktilari.html  tablo_detay.html  tablo_notlar.html  tablolar.html
tests/: test_app.py  test_excel_utils.py  test_storage.py
